# serializer version: 1
# name: TestCartPoleCostEqual.test_snapshot
  2.7395604855596334
# ---
# name: TestCartPoleCostEqual.test_snapshot.1
  -0.024448624099179084
# ---
# name: TestCartPoleCostEqual.test_snapshot.10
  -0.19298094228082074
# ---
# name: TestCartPoleCostEqual.test_snapshot.11
  0.004398229425633801
# ---
# name: TestCartPoleCostEqual.test_snapshot.12
  2.734673283652016
# ---
# name: TestCartPoleCostEqual.test_snapshot.13
  7.497615259333488
# ---
# name: TestCartPoleCostEqual.test_snapshot.14
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.15
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.16
  dict({
    'reference': 0.004398229425633801,
    'reference_error': 2.734673283652016,
    'state_of_interest': 2.7390715130776497,
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.17
  2.742812040695489
# ---
# name: TestCartPoleCostEqual.test_snapshot.18
  0.1373521677359711
# ---
# name: TestCartPoleCostEqual.test_snapshot.19
  0.14115849335141145
# ---
# name: TestCartPoleCostEqual.test_snapshot.2
  0.14343916796455297
# ---
# name: TestCartPoleCostEqual.test_snapshot.20
  -0.07676570293056856
# ---
# name: TestCartPoleCostEqual.test_snapshot.21
  0.00879645711491628
# ---
# name: TestCartPoleCostEqual.test_snapshot.22
  2.7340155835805726
# ---
# name: TestCartPoleCostEqual.test_snapshot.23
  7.493011289302983
# ---
# name: TestCartPoleCostEqual.test_snapshot.24
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.25
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.26
  dict({
    'reference': 0.00879645711491628,
    'reference_error': 2.7340155835805726,
    'state_of_interest': 2.742812040695489,
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.27
  2.745559084050208
# ---
# name: TestCartPoleCostEqual.test_snapshot.28
  0.41483476162456334
# ---
# name: TestCartPoleCostEqual.test_snapshot.29
  0.13962317929280008
# ---
# name: TestCartPoleCostEqual.test_snapshot.3
  0.07894721162374557
# ---
# name: TestCartPoleCostEqual.test_snapshot.30
  -0.44748678167775646
# ---
# name: TestCartPoleCostEqual.test_snapshot.31
  0.013194681331496797
# ---
# name: TestCartPoleCostEqual.test_snapshot.32
  2.7323644027187113
# ---
# name: TestCartPoleCostEqual.test_snapshot.33
  7.483592202123162
# ---
# name: TestCartPoleCostEqual.test_snapshot.34
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.35
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.36
  dict({
    'reference': 0.013194681331496797,
    'reference_error': 2.7323644027187113,
    'state_of_interest': 2.745559084050208,
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.37
  2.7538557792826994
# ---
# name: TestCartPoleCostEqual.test_snapshot.38
  0.5667135704060806
# ---
# name: TestCartPoleCostEqual.test_snapshot.39
  0.13067344365924494
# ---
# name: TestCartPoleCostEqual.test_snapshot.4
  0.0
# ---
# name: TestCartPoleCostEqual.test_snapshot.40
  -0.6321720124467993
# ---
# name: TestCartPoleCostEqual.test_snapshot.41
  0.01759290033902609
# ---
# name: TestCartPoleCostEqual.test_snapshot.42
  2.7362628789436734
# ---
# name: TestCartPoleCostEqual.test_snapshot.43
  7.502705576097861
# ---
# name: TestCartPoleCostEqual.test_snapshot.44
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.45
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.46
  dict({
    'reference': 0.01759290033902609,
    'reference_error': 2.7362628789436734,
    'state_of_interest': 2.7538557792826994,
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.47
  2.765190050690821
# ---
# name: TestCartPoleCostEqual.test_snapshot.48
  0.24856720024803347
# ---
# name: TestCartPoleCostEqual.test_snapshot.49
  0.11803000341030895
# ---
# name: TestCartPoleCostEqual.test_snapshot.5
  2.7395604855596334
# ---
# name: TestCartPoleCostEqual.test_snapshot.50
  -0.12071230469371952
# ---
# name: TestCartPoleCostEqual.test_snapshot.51
  0.021991112401156948
# ---
# name: TestCartPoleCostEqual.test_snapshot.52
  2.7431989382896638
# ---
# name: TestCartPoleCostEqual.test_snapshot.53
  7.537844038223492
# ---
# name: TestCartPoleCostEqual.test_snapshot.54
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.55
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.56
  dict({
    'reference': 0.021991112401156948,
    'reference_error': 2.7431989382896638,
    'state_of_interest': 2.765190050690821,
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.6
  dict({
    'reference': 0.0,
    'reference_error': 2.7395604855596334,
    'state_of_interest': 2.7395604855596334,
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.7
  2.7390715130776497
# ---
# name: TestCartPoleCostEqual.test_snapshot.8
  0.18702638089196827
# ---
# name: TestCartPoleCostEqual.test_snapshot.9
  0.14501811219702787
# ---
